support iservoce module api of bindings and request search
