# backend/docs/swagger.json
@@ -487,75 +487,6 @@
                 }
             }
         },
-        "/api/caculate/monthdata": {
-            "get": {
-                "description": "get caculate validators or delegators monthdata",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "caculate"
-                ],
-                "summary": "list",
-                "parameters": [
-                    {
-                        "enum": [
-                            "delegator",
-                            "validator"
-                        ],
-                        "type": "string",
-                        "description": "role type",
-                        "name": "type",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "default": 1,
-                        "description": "page num",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "default": 5,
-                        "description": "page size",
-                        "name": "size",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "caculateTime (eg 2006.01.02)",
-                        "name": "caculateTime",
-                        "in": "query"
-                    },
-                    {
-                        "enum": [
-                            true,
-                            false
-                        ],
-                        "type": "boolean",
-                        "description": "total",
-                        "name": "total",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/vo.ExStaticMonthDataRespond"
-                        }
-                    }
-                }
-            }
-        },
         "/api/config": {
             "get": {
                 "description": "get config",
@@ -1145,6 +1076,72 @@
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/vo.ResultVo"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/service/bindings/{servicename}": {
+            "get": {
+                "description": "get service by servicename",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "bindings",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "servicename",
+                        "name": "servicename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/vo.ServiceBindingRespond"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/service/requests/{contextid}": {
+            "get": {
+                "description": "get service requests by contextid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "requests",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "contextid",
+                        "name": "contextid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/vo.ServiceRequestRespond"
                         }
                     }
                 }
@@ -3448,20 +3445,6 @@
                 }
             }
         },
-        "vo.ExStaticMonthDataRespond": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "object"
-                },
-                "total": {
-                    "type": "integer"
-                },
-                "type": {
-                    "type": "string"
-                }
-            }
-        },
         "vo.FinalVotes": {
             "type": "object",
             "properties": {
@@ -3944,6 +3927,135 @@
                 "proposal": {
                     "type": "object",
                     "$ref": "#/definitions/vo.SimpleProposalVo"
+                }
+            }
+        },
+        "vo.ServiceBinding": {
+            "type": "object",
+            "properties": {
+                "available": {
+                    "type": "boolean"
+                },
+                "deposit": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.Coin"
+                    }
+                },
+                "disabled_time": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "pricing": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "qos": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "vo.ServiceBindingRespond": {
+            "type": "array",
+            "items": {
+                "type": "object",
+                "properties": {
+                    "available": {
+                        "type": "boolean"
+                    },
+                    "deposit": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/vo.Coin"
+                        }
+                    },
+                    "disabled_time": {
+                        "type": "string"
+                    },
+                    "owner": {
+                        "type": "string"
+                    },
+                    "pricing": {
+                        "type": "string"
+                    },
+                    "provider": {
+                        "type": "string"
+                    },
+                    "qos": {
+                        "type": "integer"
+                    },
+                    "service_name": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "vo.ServiceRequestRespond": {
+            "type": "object",
+            "properties": {
+                "batch_counter": {
+                    "type": "integer"
+                },
+                "batch_request_count": {
+                    "type": "integer"
+                },
+                "batch_response_count": {
+                    "type": "integer"
+                },
+                "batch_state": {
+                    "type": "integer"
+                },
+                "consumer": {
+                    "type": "string"
+                },
+                "input": {
+                    "type": "string"
+                },
+                "module_name": {
+                    "type": "string"
+                },
+                "providers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "repeated": {
+                    "type": "boolean"
+                },
+                "repeated_frequency": {
+                    "type": "integer"
+                },
+                "repeated_total": {
+                    "type": "integer"
+                },
+                "response_threshold": {
+                    "type": "integer"
+                },
+                "service_fee_cap": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.Coin"
+                    }
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "integer"
+                },
+                "super_mode": {
+                    "type": "boolean"
+                },
+                "timeout": {
+                    "type": "integer"
                 }
             }
         },
